05_kubernetes/03_Session3_Application_Deployment/019-telling-kubernetes-what-you-need/manifests/02-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: lab019
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: k8s-lab-web:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests: # scheduler ใช้ค่าที่จองนี้เลือก node
              cpu: 100m
              memory: 128Mi
            limits: # runtime บังคับเพดานสูงสุด
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
