05_kubernetes/03_Session3_Application_Deployment/019-telling-kubernetes-what-you-need/manifests/03-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: lab019
spec:
  selector: # ส่ง request ให้ Pod ที่มี label นี้
    app: web
  ports:
    - name: http
      port: 3000
      targetPort: http
